--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-providers:2.7.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
+    compile 'com.google.code.gson:gson:2.5'
 }
